Document test harness layout

--- a/README
+++ b/README
@@ -39,19 +39,56 @@ Target platforms:
 
 ## Testing
 
-Wizardry ships a shell-based test suite in `tests/` that exercises every spell and
-verifies coverage. Run all checks with:
+Wizardry ships a shell-based test suite in `tests/` that exercises every spell
+and verifies coverage.
+
+### Running the suite
+
+Run all checks with:
 
 ```
 ./tests/run.sh
 ```
 
-The runner downloads bats-core and companion libraries on demand, so the shell
-tests can use Bats helpers without vendoring the framework. It also executes the
-legacy shell suites, captures `bash -x` traces for every spell invocation, and
-reports coverage across the entire `spells/` tree.
+The script wipes the previous coverage workspace, enumerates all
+`test_*.bats` suites, runs them with Bats, and then aggregates the recorded
+`bash -x` traces into a coverage report. If any executable lines are missed the
+run exits non-zero so coverage regressions are easy to spot. The helper script
+`tests/check_posix_bash.sh` also prints advisory warnings about spells whose
+shebangs are not plain `#!/bin/sh`.
 
-During the run, `tests/check_posix_bash.sh` warns about spells that do not use
-the plain `#!/bin/sh` shebang so contributors can keep scripts POSIX-friendly.
-When the coverage report finds unexecuted lines, the script exits non-zero to
-ensure contributors notice any regressions.
+### Selecting tests
+
+Pass `--list` to print the discovered test files without executing them,
+`--only PATTERN` to restrict the run to specific `.bats` files (the pattern is
+evaluated relative to `tests/`), `--no-coverage` to skip the coverage report, or
+`--` followed by any arguments you want to forward directly to the underlying
+Bats runner (for example `./tests/run.sh -- --filter copy`).
+
+### Offline usage and dependencies
+
+The harness downloads bats-core and companion libraries on demand so the shell
+tests can use Bats helpers without vendoring the framework. When a local
+installation is available you can override the download step with
+`BATS_BIN=/path/to/bats` or `BATS_DIR=/path/to/prepared/vendor` (containing the
+`bats-core`, `bats-support`, `bats-assert`, and `bats-mock` directories); the
+script also falls back to `command -v bats` before attempting to fetch anything.
+
+### Directory layout
+
+The `tests/` tree keeps reusable helpers out of the way of the individual test
+files:
+
+* `tests/run.sh` – entry point that drives the suites, coverage, and warnings.
+* `tests/lib/` – shared shell utilities used by the harness (coverage
+  processing, stub helpers, Bats bootstrapping, and similar).
+* `tests/test_helper/` – loader invoked by each Bats test via
+  `load 'test_helper/load'`; it wires up the vendored assertion libraries,
+  exports convenience helpers, and sources the scripts in `tests/lib/`.
+* `tests/vendor/` – populated on demand with bats-core, bats-support,
+  bats-assert, and bats-mock when they are downloaded.
+* `tests/report_coverage.sh` – aggregates traces and enforces 100% spell
+  coverage.
+
+Individual Bats files continue to live directly under `tests/`, so contributors
+can find and run suites without digging into the helper directories.
