--- a/install
+++ b/install
@@ -1,20 +1,236 @@
 #!/bin/sh
 
-if ! command -v path-wizard > /dev/null 2>&1; then
-	read -p "ao-mud is not installed, install now? [y/n]: " choice
-	
-	if [ "$choice" = "y" ]; then
-		SCRIPT_DIR=$( cd ${0%/*} && pwd -P )
-		$SCRIPT_DIR/spells/path-wizard add $SCRIPT_DIR/spells
-		$SCRIPT_DIR/spells/path-wizard add $SCRIPT_DIR/spells/cantrips
-		$SCRIPT_DIR/spells/path-wizard add $SCRIPT_DIR/spells/menu
-		$SCRIPT_DIR/spells/path-wizard add $SCRIPT_DIR/spells/menu/bitcoin
-		echo "Your spellbook has been activated, please open a fresh terminal now."
-		exit 0
-	else
-		echo "Ok, well the mud won't work until you install it by adding the spells directory to your PATH."
-		exit 1
-	fi
-else
-	echo "ao-mud is already installed. Run it with 'menu' or 'mud'."
+# Abort if unexpected arguments are supplied so we do not accidentally discard
+# them when repurposing the positional parameters to track missing directories.
+if [ "$#" -ne 0 ]; then
+        printf '%s\n' "Usage: install" >&2
+        exit 1
 fi
+
+# Resolve the directory containing this installer without relying on
+# non-POSIX utilities so the script works on Debian's /bin/sh (dash).
+case $0 in
+        */*)
+                SCRIPT_DIR=${0%/*}
+                ;;
+        *)
+                SCRIPT_DIR=.
+                ;;
+esac
+
+# Disable CDPATH so that "cd" behaves predictably even if the user has a
+# custom search path configured in their environment.
+unset CDPATH
+
+ABS_DIR=$(cd "$SCRIPT_DIR" && pwd -P) || exit 1
+PATH_WIZARD="$ABS_DIR/spells/path-wizard"
+REQUIRED_REL_DIRS="spells spells/cantrips spells/menu"
+
+if [ ! -x "$PATH_WIZARD" ]; then
+        printf '%s\n' "Error: Expected helper '$PATH_WIZARD' is missing or not executable." >&2
+        exit 1
+fi
+
+detect_platform() {
+        if [ -n "${WIZARDRY_INSTALL_PLATFORM-}" ]; then
+                printf '%s' "$WIZARDRY_INSTALL_PLATFORM"
+                return 0
+        fi
+
+        if [ -f /etc/NIXOS ] || grep -qi 'ID=nixos' /etc/os-release 2>/dev/null; then
+                printf '%s' 'nixos'
+                return 0
+        fi
+        if [ -f /etc/debian_version ]; then
+                printf '%s' 'debian'
+                return 0
+        fi
+        if [ -f /etc/arch-release ]; then
+                printf '%s' 'arch'
+                return 0
+        fi
+        if [ -f /etc/fedora-release ]; then
+                printf '%s' 'fedora'
+                return 0
+        fi
+        if uname 2>/dev/null | grep -q 'Darwin'; then
+                printf '%s' 'mac'
+                return 0
+        fi
+        printf '%s' 'unknown'
+        return 1
+}
+
+add_candidate() {
+        file=$1
+        if [ -z "$file" ]; then
+                return
+        fi
+        for candidate in $RC_CANDIDATES
+        do
+                if [ "$candidate" = "$file" ]; then
+                        return
+                fi
+        done
+        if [ -z "$RC_CANDIDATES" ]; then
+                RC_CANDIDATES=$file
+        else
+                RC_CANDIDATES="$RC_CANDIDATES $file"
+        fi
+}
+
+PLATFORM=$(detect_platform)
+
+# Build a list of start-up files to consider based on the detected platform and
+# the user's preferred shell.
+RC_CANDIDATES=''
+
+case $PLATFORM in
+        mac)
+                add_candidate "$HOME/.zshrc"
+                add_candidate "$HOME/.zprofile"
+                add_candidate "$HOME/.bash_profile"
+                ;;
+        nixos)
+                add_candidate "$HOME/.config/nixpkgs/configuration.nix"
+                add_candidate "$HOME/.bashrc"
+                add_candidate "$HOME/.bash_profile"
+                ;;
+        debian|arch|fedora)
+                add_candidate "$HOME/.bashrc"
+                add_candidate "$HOME/.profile"
+                ;;
+        *) : ;;
+esac
+
+case ${SHELL##*/} in
+        zsh)
+                add_candidate "$HOME/.zshrc"
+                add_candidate "$HOME/.zprofile"
+                ;;
+        bash)
+                add_candidate "$HOME/.bashrc"
+                add_candidate "$HOME/.bash_profile"
+                ;;
+        *)
+                add_candidate "$HOME/.profile"
+                ;;
+esac
+
+add_candidate "$HOME/.bashrc"
+add_candidate "$HOME/.profile"
+
+RC_FILE=''
+for candidate in $RC_CANDIDATES
+do
+        if [ -f "$candidate" ]; then
+                RC_FILE=$candidate
+                break
+        fi
+done
+
+if [ -z "$RC_FILE" ]; then
+        # Fall back to the first candidate; create it later once the user
+        # confirms the installation.
+        for candidate in $RC_CANDIDATES
+        do
+                RC_FILE=$candidate
+                break
+        done
+fi
+
+if [ -z "$RC_FILE" ]; then
+        printf '%s\n' "Error: Unable to determine which start-up file to modify." >&2
+        exit 1
+fi
+
+case $RC_FILE in
+        *.nix)
+                FORMAT=nix
+                ;;
+        *)
+                FORMAT=shell
+                ;;
+esac
+
+# Require explicit confirmation before editing configuration.nix on NixOS.
+FORCE_PROMPT=0
+if [ "$FORMAT" = "nix" ]; then
+        FORCE_PROMPT=1
+fi
+
+# Collect the directories whose PATH exports are absent from the chosen start-up
+# file so we can repair them in one pass.
+set --
+for rel in $REQUIRED_REL_DIRS
+do
+        dir="$ABS_DIR/$rel"
+
+        if [ ! -d "$dir" ]; then
+                printf '%s\n' "Warning: Expected directory '$dir' is missing; skipping." >&2
+                continue
+        fi
+
+        if "$PATH_WIZARD" --rc-file "$RC_FILE" --format "$FORMAT" --platform "$PLATFORM" status "$dir"; then
+                continue
+        fi
+        set -- "$@" "$dir"
+done
+
+if [ "$#" -eq 0 ]; then
+        printf '%s\n' "ao-mud is already installed. Run it with 'menu' or 'mud'."
+        exit 0
+fi
+
+printf '%s\n' "ao-mud will ensure the following directories appear in your PATH (via $(basename "$RC_FILE")):"
+for dir
+do
+        printf '  %s\n' "$dir"
+done
+
+if [ "$FORMAT" = "nix" ]; then
+        printf '\n%s\n' "NixOS detected: $(basename "$RC_FILE") will be updated and backed up before editing."
+fi
+
+choice=''
+if [ "$FORCE_PROMPT" -eq 0 ] && [ "${WIZARDRY_INSTALL_ASSUME_YES-}" = "1" ]; then
+        choice=y
+else
+        printf '%s' "Proceed with installation? [y/n]: "
+        IFS= read -r choice || choice=
+fi
+
+case $choice in
+        y|Y)
+                rc_dir=${RC_FILE%/*}
+                if [ "$rc_dir" != "$RC_FILE" ] && [ ! -d "$rc_dir" ]; then
+                        if ! mkdir -p "$rc_dir"; then
+                                printf '%s\n' "Error: Unable to create directory '$rc_dir'." >&2
+                                exit 1
+                        fi
+                fi
+                if [ ! -f "$RC_FILE" ]; then
+                        if ! : >"$RC_FILE"; then
+                                printf '%s\n' "Error: Unable to create '$RC_FILE'." >&2
+                                exit 1
+                        fi
+                fi
+                for dir
+                do
+                        "$PATH_WIZARD" --rc-file "$RC_FILE" --format "$FORMAT" --platform "$PLATFORM" add "$dir" || exit 1
+                done
+                case $FORMAT in
+                        nix)
+                                printf '%s\n' "Your spellbook has been activated. Rebuild your Nix environment or restart your shell to load $(basename "$RC_FILE")."
+                                ;;
+                        *)
+                                printf '%s\n' "Your spellbook has been activated. Open a fresh terminal to load $(basename "$RC_FILE")."
+                                ;;
+                esac
+                exit 0
+                ;;
+        *)
+                printf '%s\n' "Ok, well the mud won't work until you install it by adding the spells directory to your PATH."
+                exit 1
+                ;;
+esac
